2003-11-02  Martin Baulig  <martin@ximian.com>

	* reflection.h
	(MonoReflectionInflatedMethod, MonoReflectionInflatedField): Added
	`MonoReflectionGenericInst *declaring_type' and
	`MonoReflectionGenericInst *reflected_type' fields.

	* reflection.c (mono_reflection_inflate_method_or_ctor): Take a
	`MonoReflectionGenericInst *declaring_type' and a
	`MonoReflectionGenericInst *reflected_type' argument instead of a
	single `MonoReflectionGenericInst *type' one.  Set
	`res->declaring_type' and `res->reflected_type' from them.
	(mono_reflection_inflate_field): Likewise.	

2003-11-02  Martin Baulig  <martin@ximian.com>

	* class.c (mono_class_setup_vtable): Don't store generic methods
	in the vtable.	

2003-11-02  Martin Baulig  <martin@ximian.com>

	* reflection.h (MonoReflectionGenericInst): Added
	`MonoReflectionType *declaring_type'.

	* reflection.c (mono_reflection_bind_generic_parameters): Use
	`if (tb->parent)' instead of `klass->parent'.

2003-11-01  Zoltan Varga  <vargaz@freemail.hu>

	* assembly.c (mono_assembly_open): Avoid crash if a module is loaded
	with an empty ASSEMBLY table.

	* reflection.c (mono_image_build_metadata): Avoid using the same loop
	variable in the inner and outer loops.

2003-10-31  Zoltan Varga  <vargaz@freemail.hu>

	* metadata.h (mono_metadata_make_token): Put parentheses around macro
	argument.

	* appdomain.h appdomain.c (ves_icall_System_AppDomain_InternalPushDomainRef): Fix signature.
	
	* appdomain.c appdomain.h icall.c: Get rid of the InvokeInDomain 
	icalls. Instead, do everything in managed code. This is needed since
	it is hard to restore the original domain etc. in unmanaged code in the
	presence of undeniable exceptions.

	* appdomain.c (ves_icall_System_AppDomain_InternalPushDomainRef): 
	New icalls to push and pop appdomain refs.

2003-10-31  Martin Baulig  <martin@ximian.com>

	* class.c (inflate_generic_type): Renamed to
	mono_class_inflate_generic_type() and made it public.
